force-app/main/default/objects/Possession_Reconciliation__c/Possession_Reconciliation__c.object-meta.xml
<CustomObject>
    <label>Possession Reconciliation</label>
    <nameField>
        <label>Possession Reconciliation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Possession Reconciliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>