force-app/main/default/objects/Possession_Reconciliation__c/fields/Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status__c</fullName>
    <label>Booking Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>