force-app/main/default/objects/Possession_Reconciliation__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <length>50</length>
    <type>Text</type>
</CustomField>