force-app/main/default/objects/Possession_Reconciliation__c/fields/Scheduling_Days__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Days__c</fullName>
    <label>Scheduling Days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MON</fullName>
            </value>
            <value>
                <fullName>TUE</fullName>
            </value>
            <value>
                <fullName>WED</fullName>
            </value>
            <value>
                <fullName>THU</fullName>
            </value>
            <value>
                <fullName>FRI</fullName>
            </value>
            <value>
                <fullName>SAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>