force-app/main/default/objects/Possession_Reconciliation__c/fields/Scheduling_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Time__c</fullName>
    <label>Scheduling Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00:00</fullName>
            </value>
            <value>
                <fullName>00:15</fullName>
            </value>
            <value>
                <fullName>00:30</fullName>
            </value>
            <value>
                <fullName>00:45</fullName>
            </value>
            <value>
                <fullName>01:00</fullName>
            </value>
            <value>
                <fullName>01:15</fullName>
            </value>
            <value>
                <fullName>01:30</fullName>
            </value>
            <value>
                <fullName>01:45</fullName>
            </value>
            <value>
                <fullName>02:00</fullName>
            </value>
            <value>
                <fullName>02:15</fullName>
            </value>
            <value>
                <fullName>02:30</fullName>
            </value>
            <value>
                <fullName>02:45</fullName>
            </value>
            <value>
                <fullName>03:00</fullName>
            </value>
            <value>
                <fullName>03:15</fullName>
            </value>
            <value>
                <fullName>03:30</fullName>
            </value>
            <value>
                <fullName>03:45</fullName>
            </value>
            <value>
                <fullName>04:00</fullName>
            </value>
            <value>
                <fullName>04:15</fullName>
            </value>
            <value>
                <fullName>04:30</fullName>
            </value>
            <value>
                <fullName>04:45</fullName>
            </value>
            <value>
                <fullName>05:00</fullName>
            </value>
            <value>
                <fullName>05:15</fullName>
            </value>
            <value>
                <fullName>05:30</fullName>
            </value>
            <value>
                <fullName>05:45</fullName>
            </value>
            <value>
                <fullName>06:00</fullName>
            </value>
            <value>
                <fullName>06:15</fullName>
            </value>
            <value>
                <fullName>06:30</fullName>
            </value>
            <value>
                <fullName>06:45</fullName>
            </value>
            <value>
                <fullName>07:00</fullName>
            </value>
            <value>
                <fullName>07:15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>