force-app/main/default/objects/Possession_Reconciliation__c/fields/Start_Date1__c.field-meta.xml
<CustomField>
    <fullName>Start_Date1__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>