force-app/main/default/objects/Possession_Reconciliation__c/fields/Stop_Schedule_Job__c.field-meta.xml
<CustomField>
    <fullName>Stop_Schedule_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Schedule Job</label>
    <type>Checkbox</type>
</CustomField>