force-app/main/default/objects/Possession_Reconciliation__c/fields/Towers__c.field-meta.xml
<CustomField>
    <fullName>Towers__c</fullName>
    <label>Towers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>